--- a/cui.css
+++ b/cui.css
@@ -79,7 +79,7 @@ h2{
     background-color: #ebebeb;
   }
 
-  @media only screen and (max-width:500px) {
+  @media only screen and (max-width:846px) {
     .cui-title-on-tab {
         display: none;
     }
@@ -98,7 +98,7 @@ h2{
     border: none;
 }
 
-@media only screen and (max-width:500px) {
+@media only screen and (max-width:846px) {
     .dropmenu {
         display: block;
     }
@@ -106,6 +106,10 @@ h2{
 
 .dropbtn:hover, .dropbtn:focus {
     background-color: #ffffff;
+}
+
+.dropdown{
+    float: right;
 }
 
 .dropmenu {
@@ -120,8 +124,8 @@ h2{
 .dropmenu-content {
     visibility: hidden;
     opacity: 0;
-    transform: translateY(-5%);
-    height: 0;
+    transform:scale(1,0.8);
+    max-height: 0;
     position: absolute;
     background-color: #ffffff;
     border-radius: 16px;
@@ -130,26 +134,34 @@ h2{
     box-shadow: 0 2px 18px 0 rgb(0 0 0 / 7%);
     right: 0;
     z-index: 1;
+    margin-right: 10px;
+    margin-top: 50px;
     transition-duration: 0.4s;
     transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
 }
 
-.dropmenu-content a {
+a {
     color: black;
     padding: 12px 16px;
     border-radius: 16px;
     text-decoration: none;
     display: block;
     margin: 10px;
+    transition-duration: 240ms;
 }
+
+a:hover {
+    background-color: whitesmoke;
+}
+
 
 .show {
     visibility: visible;
     opacity: 1;
-    height: 780px;
-    transform: translateY(0);
     transition-duration: 0.4s;
     transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
+    max-height: 666px;
+    transform:none;
 }
 /* 按钮 */
 .cui-round-button{
@@ -183,4 +195,45 @@ h2{
 .cui-button:hover{
     transition-duration: 0.4s;
     box-shadow: 0 8px 43px 0 rgb(0 0 0 / 13%);
+}
+
+/*用于下拉菜单*/
+
+.cui-dropmenu{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    border-radius: 8px;
+    padding: 10px;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 2px 18px 0 rgb(0 0 0 / 7%);
+}
+
+.cui-dropmenu-content {
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0px;
+    position: absolute;
+    background-color: #ffffff;
+    border-radius: 16px;
+    min-width: 300px;
+    overflow: auto;
+    box-shadow: 0 2px 18px 0 rgb(0 0 0 / 7%);
+    z-index: 1;
+    transition-duration: 0.4s;
+    transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
+    margin-top: 10px;
+    overflow:hidden;
+    transform: scale(1,0.8);
+}
+
+.listshow {
+    visibility: visible;
+    opacity: 1;
+    max-height: 600px;
+    transform: none;
+    transition-duration: 0.4s;
+    transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
 }
