--- a/cui.css
+++ b/cui.css
@@ -4,17 +4,30 @@
 /* https://github.com/KAILUENG/connect-UI */
 
 @font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1mgj5t');
-  src:  url('fonts/icomoon.eot?1mgj5t#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1mgj5t') format('truetype'),
-    url('fonts/icomoon.woff?1mgj5t') format('woff'),
-    url('fonts/icomoon.svg?1mgj5t#icomoon') format('svg');
+  font-family: 'OUR-icons';
+  src:
+    url('fonts/OUR-icons.ttf?t7xyvc') format('truetype'),
+    url('fonts/OUR-icons.woff?t7xyvc') format('woff'),
+    url('fonts/OUR-icons.svg?t7xyvc#OUR-icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'OUR-icons' !important;
+  speak-as: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 body {
   /* 用于保持页面有最基本的内间距 */
@@ -233,9 +246,15 @@ a:hover {
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
-  margin-top: 20px;
   margin-bottom: 20px;
   transition: 250ms;
+}
+
+.cui-droplist-space{
+  width: 20%;
+  height: 0; /* 设置高为0，让padding撑起高 */
+  padding-bottom: 20%; /* 让div的高等于宽 */
+  border-radius: 50%;
 }
 
 @media only screen and (max-width: 846px){
@@ -264,7 +283,10 @@ a:hover {
   transform: scale(1, 0.8);
   overflow: hidden;
   transform: scale(1, 0.8);
-  margin-top: -8px;
+}
+.cui-icons{
+  font-family: 'OUR-icons' !important;
+  margin-right: 10px;
 }
 
 .listshow {
@@ -302,7 +324,7 @@ a:hover {
 .cui-parendisplay {
   float: right;
   cursor: pointer;
-  font-family: 'icomoon' !important;
+  font-family: 'OUR-icons' !important;
   font-size: 20px;
 }
 
@@ -372,6 +394,7 @@ a:hover {
   outline: none;
   transition-duration: 0.2s;
   min-height: 50px;
+  cursor: pointer;
 }
 
 .cui-input:focus {
@@ -436,6 +459,7 @@ a:hover {
   top: 0;
   height: 20px;
   line-height: 20px;
+  cursor: pointer;
 }
 .cui-checkbox label:before {
   content: ' ';
@@ -451,7 +475,7 @@ a:hover {
 }
 
 .cui-checkbox label:after {
-  content: '';
+  content: '';
   position: absolute;
   left: -23.5px;
   top: 2.2px;
@@ -461,7 +485,7 @@ a:hover {
   color: #ffffff;
   transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
-  font-family: 'icomoon' !important;
+  font-family: 'OUR-icons' !important;
   font-size: 12px;
   font-weight: 600;
 }
@@ -536,11 +560,8 @@ a:hover {
     min-width: none;
   }
 }
-.cui-right{
-  font-family: 'icomoon' !important;
-  font-size: 30px;
-}
-.cui-wrong{
-  font-family: 'icomoon' !important;
+
+.cui-our-font{
+  font-family: 'OUR-icons' !important;
   font-size: 30px;
 }
