--- a/cui.css
+++ b/cui.css
@@ -29,6 +29,76 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+      background-color: #212121;
+  }
+  .cui-tab{
+    background-color: rgba(0, 0, 0, 0.692) !important;
+    color: rgb(228, 228, 228);
+  }
+  .cui-title-on-tab:hover{
+    background-color: rgba(255, 255, 255, 0.062) !important;
+  }
+  .cui-pop-up-prompt{
+    background-color: #FFB217 !important;
+  }
+  h1{
+    color: rgb(228, 228, 228);
+  }
+  h2{
+    color: rgb(228, 228, 228);
+  }
+  p{
+    color: rgb(228, 228, 228);
+  }
+  .cui-button{
+    color: rgb(228, 228, 228) !important;
+  }
+  .cui-dropmenu{
+    border-color: #fcfcfc;
+    background-color: rgba(206, 206, 206, 0.13) !important;
+    color: rgb(255, 255, 255) !important;
+    border-color: rgba(255, 255, 255, 0.555) !important;
+  }
+  .cui-dropmenu-content{
+    background-color: rgba(206, 206, 206, 0.13) !important;
+  }
+  a{
+    color: rgb(255, 255, 255) !important;
+  }
+  .dropmenu-content{
+    background-color: rgb(56, 56, 56) !important;
+  }
+  .dropmenu{
+    color: rgb(255, 255, 255) !important;
+  }
+  .cui-input{
+    background-color: rgba(206, 206, 206, 0.13) !important;
+  }
+  .cui-input-color{
+    background-color: rgba(206, 206, 206, 0.13) !important;
+  }
+  .cui-checkbox label {
+    color: rgb(255, 255, 255) !important;
+  }
+  .cui-our-font{
+    color: rgb(255, 255, 255) !important;
+  }
+  img{
+    filter: brightness(.8);
+  }
+  .cui-label-input{
+    color: rgb(228, 228, 228);
+  }
+}
+@media (prefers-reduced-motion: reduce) {
+  * {
+      transition: all 0s!important;
+      transform: none!important;
+  }
+}
+
 body {
   /* 用于保持页面有最基本的内间距 */
   padding: 40px;
@@ -229,6 +299,9 @@ a:hover {
   transition: 250ms;
   width: 300px;
   text-align: left;
+  border: 1px;
+  border-style: solid;
+  border-color: #EFEFEF;
 }
 
 
@@ -369,6 +442,7 @@ a:hover {
   border-color: #EFEFEF;
   outline: none;
   transition-duration: 0.2s;
+  margin-top: 10px;
 }
 
 
@@ -391,6 +465,7 @@ a:hover {
   transition-duration: 0.2s;
   min-height: 50px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .cui-input:focus {
@@ -403,13 +478,11 @@ a:hover {
   border-width: 3px;
 }
 
-.cui-p-input {
+.cui-label-input {
   font-weight: bolder;
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-right: 20px;
 }
-
-
 
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
@@ -456,6 +529,7 @@ a:hover {
   height: 20px;
   line-height: 20px;
   cursor: pointer;
+
 }
 .cui-checkbox label:before {
   content: ' ';
@@ -464,6 +538,7 @@ a:hover {
   top: 0;
   width: 20px;
   height: 20px;
+  background-color: white;
   border: 2px solid #EFEFEF;
   border-radius: 8px;
   transition: all 0.3s ease;
@@ -488,6 +563,7 @@ a:hover {
 .cui-checkbox input[type='checkbox']:checked + label:before {
   background: #5395FD;
   border-color: #5395FD;
+  color: #ffffff;
 }
 .cui-input-range{
   -webkit-appearance: none;
