--- a/cui.css
+++ b/cui.css
@@ -91,6 +91,10 @@
   .cui-label-input{
     color: rgb(228, 228, 228);
   }
+  .cui-info-card{
+    color: rgb(228, 228, 228);
+    background-color: rgb(56, 56, 56) !important;
+  }
 }
 @media (prefers-reduced-motion: reduce) {
   * {
@@ -587,6 +591,48 @@ a:hover {
   padding: 1px;
 }
 
+.cui-original-input {
+    height: 0px;
+    width: 0px;
+    visibility: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+.cui-switch-wrap label {
+    display: inline-block;
+    width: 52px;
+    height: 24px;
+    outline: none;
+    border-radius: 16px;
+    box-sizing: border-box;
+    background: #B2B2B2;
+    cursor: pointer;
+    transition: border-color .3s, background-color .3s;
+    vertical-align: middle;
+    position: relative;
+    padding: 6px;
+}
+
+.cui-switch-wrap label::before {
+    content: '';
+    position: absolute;
+    transition: transform 0.3s;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
+    background-color: #fff;
+}
+
+.cui-switch-wrap input:checked+label {
+    background: #5395FD;
+}
+
+.cui-switch-wrap input:checked+label:before {
+    transform: translateX(26px);
+}
+
 .cui-input-range::-webkit-slider-thumb:before,
 .cui-input-range::-webkit-slider-thumb:after
 {
@@ -669,3 +715,19 @@ a:hover {
   font-size: 30px;
 }
 
+.cui-info-card {
+  border-radius: 18px;
+  background-color: white;
+  text-align: center;
+  margin: 18px;
+  flex: 1;
+  box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
+  min-width:33.333333%;;
+  padding-bottom: 20px;
+}
+.cui-auto-img-card{
+  display: block;
+  width: 100%;
+  border-top-left-radius: 18px;
+  border-top-right-radius: 18px;
+}
