--- a/cui.css
+++ b/cui.css
@@ -4,19 +4,19 @@
 /* https://github.com/KAILUENG/connect-UI */
 
 @font-face {
-  font-family: 'OUR-icons';
+  font-family: 'OUR-FONT-ICON';
   src:
-    url('fonts/OUR-icons.ttf?t7xyvc') format('truetype'),
-    url('fonts/OUR-icons.woff?t7xyvc') format('woff'),
-    url('fonts/OUR-icons.svg?t7xyvc#OUR-icons') format('svg');
+    url('fonts/OUR-FONT-ICON.ttf?nd57hh') format('truetype'),
+    url('fonts/OUR-FONT-ICON.woff?nd57hh') format('woff'),
+    url('fonts/OUR-FONT-ICON.svg?nd57hh#OUR-FONT-ICON') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="OFI-"], [class*=" OFI-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'OUR-icons' !important;
+  font-family: 'OUR-FONT-ICON' !important;
   speak-as: never;
   font-style: normal;
   font-weight: normal;
@@ -28,6 +28,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 @media (prefers-color-scheme: dark) {
   body {
@@ -95,6 +96,12 @@
     color: rgb(228, 228, 228);
     background-color: rgb(56, 56, 56) !important;
   }
+  .cui-sidebar{
+    background-color: rgb(56, 56, 56) !important;
+  }
+  .cui-radio-group{
+    color: rgb(228, 228, 228);
+  }
 }
 @media (prefers-reduced-motion: reduce) {
   * {
@@ -104,7 +111,6 @@
 }
 
 body {
-  /* 用于保持页面有最基本的内间距 */
   padding: 40px;
   margin: 0px;
   border-width: 0px;
@@ -112,6 +118,10 @@ body {
 
 .cui-if-use-tab {
   margin-top: 100px;
+}
+.cui-if-use-tab-and-sidebar {
+  margin-top: 100px;
+  padding-left: 28vh;
 }
 
 h1 {
@@ -424,6 +434,62 @@ a:hover {
   border-radius: 16px;
   min-width: 300px;
 }
+#cuisnackbaryellow {
+  visibility: hidden;
+  box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
+  -webkit-backdrop-filter: blur(16px);
+          backdrop-filter: blur(16px);
+  background-color: #FFF1BA;
+  color: black;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  bottom: 30px;
+  font-size: 17px;
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
+  opacity: 0;
+  max-height: 0px;
+  transform: scale(1, 0.8);
+  border-radius: 16px;
+  min-width: 300px;
+}
+#cuisnackbarred {
+  visibility: hidden;
+  box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
+  -webkit-backdrop-filter: blur(16px);
+          backdrop-filter: blur(16px);
+  background-color: #FFC3C3;
+  color: black;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  bottom: 30px;
+  font-size: 17px;
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0.6, 0.02, 0, 1.01);
+  opacity: 0;
+  max-height: 0px;
+  transform: scale(1, 0.8);
+  border-radius: 16px;
+  min-width: 300px;
+}
+#cuisnackbarred.show {
+  visibility: visible;
+  opacity: 1;
+  max-height: 600px;
+  transform: none;
+}
+#cuisnackbaryellow.show {
+  visibility: visible;
+  opacity: 1;
+  max-height: 600px;
+  transform: none;
+}
 #cuisnackbar.show {
   visibility: visible;
   opacity: 1;
@@ -590,7 +656,44 @@ a:hover {
   border-radius:50%; 
   padding: 1px;
 }
+.cui-input-radio{
+  display: inline-block;
+  border:2px solid #EFEFEF;
+  width:16px;
+  height: 16px;
+  border-radius:50%;
+  vertical-align: middle;
+  margin-right: 5px;
+  position: relative;
+}
+.cui-input-radio:before{
+  content: '';
+  font-size: 0;
+  width: 10px;
+  height: 10px;
+  background: #5395FD;
+  position: absolute;
+  left:50%;
+  top:50%;
+  margin-left: -5px;
+  margin-top: -5px;
+  border-radius: 50%;
+  display: none;
+}
+.cui-input-radio-self:checked~.cui-input-radio:before{
+  display: block;
+}
 
+.cui-input-radio-self{
+  display: none;
+}
+.vertical{
+  flex-direction: column;
+  display: inline-flex;
+}
+.cui-radio-group{
+  margin-top: 10px;
+}
 .cui-original-input {
     height: 0px;
     width: 0px;
@@ -711,23 +814,83 @@ a:hover {
 }
 
 .cui-our-font{
-  font-family: 'OUR-icons' !important;
-  font-size: 30px;
+  font-family: 'OUR-FONT-ICON' !important;
+  font-size: 16px;
+  margin-right: 10px;
+  line-height: 14px;
+  user-select: none;
 }
 
 .cui-info-card {
-  border-radius: 18px;
-  background-color: white;
+  border-radius: 30px;
+  background-color: #fff;
+  padding: 25px;
   text-align: center;
-  margin: 18px;
-  flex: 1;
+  margin: 10px;
   box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
-  min-width:33.333333%;;
-  padding-bottom: 20px;
+  transition: 300ms;
 }
+
 .cui-auto-img-card{
   display: block;
   width: 100%;
   border-top-left-radius: 18px;
   border-top-right-radius: 18px;
+}
+.cui-card-group{
+  display: flex;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 500px) {
+  .cui-card-group{
+    flex-direction: column
+  }
+}
+
+
+.cui-sidebar{
+  width: 24vh;
+  background-color: white;
+  position: unset;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex: none;
+  flex: none;
+  position: fixed;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+  box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.07);
+  margin-left: -28vh;
+  margin-top: -28px;
+  padding: 20px;
+}
+
+.cui-a-active{
+  background-color: #5395FD;
+  color: white;
+}
+
+.cui-a-active:hover {
+  background-color: #5394fd2a;
+  color: black;
+}
+
+.for-slider{
+  border-radius: 8px;
+  margin: 0px;
+  margin-bottom: 10px;
+  line-height: 14px;
+}
+
+.cui-sidebar-tips{
+  bottom: 0;
+  margin-bottom: 10px;
+  font-size: 10px;
+  color: #B2B2B2;
+}
+
+.for-checkbox-allround{
+  border-radius: 50%;
 }
